--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,8 @@ footer {
     padding: 20px;
     margin-top: 20px;
 }
+
+img {
+    max-width: 100%;  /* Hace que la imagen no sea más grande que su contenedor */
+    height: auto;  /* Mantiene la proporción de la imagen */
+}
